Allow some JVM arguments to be passed to Remote Execution workers
Summary: When running RE with Java 11 on fbsource, we also get warnings about reflection not being allowed. By passing the JVM args up to the RE worker, we can prevent these.

Reviewed By: mykola-semko

shipit-source-id: 19baa4ba0237a10ee46231cc9d7a175425a6cd81